frontend/css/inc/custom-layout.sass
$kars-card-radius: 16px

@include media-breakpoint-down(sm)
    .container
        padding-left: 0
        padding-right: 0

a.has-icon
    text-decoration: none

.icon
    width: 1.5rem
    display: inline-flex
    justify-content: center

.icon.clickable
    color: $link-color
    cursor: pointer

.icon.icon-lg
    font-size: 1.5rem

.link-like
    color: $link-color
    font-weight: 500
    &:hover
        text-decoration: underline

@keyframes mascot-a
    from 
        transform: scaleY(1) translateY(0)
    to
        transform: scaleY(0.8) translateY(6px)


.kars-navbar
    display: flex
    justify-content: space-between
    position: relative
    z-index: 50

    .kars-navbar-list
        display: flex
        padding-top: 12px
        padding-bottom: 12px
        
        &.kars-navbar-leading .item
            margin-right: 20px
        &.kars-navbar-trailing .item
            margin-left: 20px

        .item, .item a
            color: $kars-navbar-item-color
        .item a:hover
            color: $kars-navbar-item-hover-color

    .kars-navbar-leading
        scrollbar-width: none
        &::-webkit-scrollbar
            width: 0
            height: 0
    .icon
        font-size: 1.33rem
    
    .mascot
        margin-top: -6px
        margin-bottom: -2px
        transition: filter 150ms linear, transform 150ms ease-out
    
    .mascot:hover
        filter: saturate(120%)
        animation: mascot-a 200ms ease-out 0s alternate 2

    .nav-icon, .nav-icon:hover
        text-decoration: none !important

    .nav-submenu
        display: none
        transition: opacity 150ms ease-out

    .nav-submenu.animate-out
        opacity: 0

    .nav-submenu.open
        display: block
        position: absolute
        z-index: 50
        left: 0
        right: 0

        margin-top: 12px
        padding: 0
        background: $nav-menu-bg
        border-top: 1px solid $nav-menu-separator
        
    .nav-submenu .sub-item
        display: block
        position: relative
        min-width: 20rem

        // Mobile only
        padding: 0.5rem 1rem
        border-bottom: 1px solid $nav-menu-separator

        &:hover, &:hover a
            background: $primary
            color: white
            text-decoration: none
    
    @include media-breakpoint-up(sm)
        .item
            position: relative

        .nav-submenu.open
            top: 100%
            left: -1rem
            right: unset
            border-radius: 8px
            padding: 0.5rem 0
            border-top: none
        
        .nav-submenu .sub-item
            padding: 0.5rem 1rem
            margin: 0
            border: none

html[lang=ja] .kars-navbar-list
    word-break: keep-all

.kars-sub-navbar
    display: flex
    flex-direction: row
    align-items: center
    margin-bottom: 0.8rem

    &.is-right
        justify-content: flex-end
    &.is-right > .item
        margin-left: 1rem
        margin-right: 0
        &:not(.has-icon)
            font-size: 0.9rem
    &> .item
        color: $kars-navbar-item-color
        margin-left: 0
        margin-right: 1rem
        &:not(.has-icon)
            font-size: 0.9rem

.stretch-bar
    display: flex
    flex-direction: row

    .flexible-space
        flex-grow: 2

.kars-footer
    font-size: 0.8rem
    margin: $card-spacer-y $card-spacer-x
    padding-bottom: calc(1rem + env(safe-area-inset-bottom))

/* cards */

.kars-negative-box
    padding-left: $card-spacer-x
    padding-right: $card-spacer-x

.kars-card-box
    margin-top: 0.5rem
    margin-bottom: 2rem
    border: none
    border-radius: $kars-card-radius

    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1), 0 0 0 1px $kars-box-highlight-color

    &>*:first-child
        border-radius: $kars-card-radius $kars-card-radius 0 0

    &>*:last-child
        border-radius: 0 0 $kars-card-radius $kars-card-radius

.kars-card-image-backing
    background-size: cover
    position: relative
    display: block
    font-size: 0

.kars-card-image-backing:first-child, .kars-card-image-backing:first-child img
    border-radius: $kars-card-radius $kars-card-radius 0 0

.kars-card-image-float
    position: absolute
    bottom: 0
    left: 0
    padding: 8px
    display: flex
    align-items: flex-end
    font-size: 0.9rem

    & > *
      padding-right: 8px

.kars-mem-padding
    padding: 35px 20px 20px 20px

.kars-mem-inline-icons
    display: flex
    align-items: flex-end
    flex-wrap: wrap

.kars-member-header
    display: flex
    flex-wrap: wrap
    align-items: flex-end
    position: relative

    &.kars-member-small
        margin-bottom: 0 !important
        padding-bottom: 0

    .item
        margin-right: 0.75rem

.kars-card-spread
    max-width: 100%
    object-fit: cover
    min-height: 300px

.kars-ornament-top-left
    pointer-events: none
    position: absolute
    z-index: 0
    top: 0
    left: 0
    width: 100%
    border-top: 8px solid orange
    border-left: 40px solid orange
    border-bottom: 40px solid transparent

.kars-ornament-bottom-left
    pointer-events: none
    position: absolute
    bottom: 0
    left: 0
    width: 100%
    border-bottom: 8px solid orange
    border-left: 40px solid orange
    border-top: 40px solid transparent

/* stats */

.kars-stats-table
    margin-bottom: 0
    thead th
        border-top: none

.kars-skill-table
    margin-bottom: 0
    td 
        font-size: 80%
        vertical-align: middle
    tr:first-child td, td:first-child
        border-top: none

.kars-stats-table .stats-table-cr
    font-size: 75%
    padding: 0.1rem 0.2rem
    color: $kars-stat-critical-rate-text

    .icon
        width: unset
    
    &.super .icon
        color: $kars-stat-critical-rate-super-text

/* skills */

img.kars-skill-icon
    width: 44px
    height: 44px

.kars-skill-name
    font-weight: bold

.var, .let
    color: $kars-var-color
.var2, .let2
    color: $kars-var-color-alt
.var, .var2
    font-weight: bold

@for $i from 1 through 6
    .kars-attr-#{$i}
        color: nth($kars-attr-colors, $i)

@each $e in $kars-role-colors
    .kars-role-#{index($kars-role-colors, $e)}
        color: $e

@each $e in $kars-stat-colors
    .kars-stat-#{index($kars-stat-colors, $e)}
        color: $e

.kars-image-switch
    position: relative
    border-radius: 999px
    padding: 2px 2px
    transition: opacity 86ms

    background-color: $kars-gutter-bg

    a, a:hover, span.fake
        display: inline-block
        text-decoration: none
        color: $kars-gutter-text !important
        padding: 2px 12px
        cursor: pointer

    &:not(.latched) > a.selected, &:not(.latched) > a.selected:hover, span.fake
        border-radius: 999px
        color: $kars-gutter-select-text !important
        background-color: $kars-gutter-select-bg
        box-shadow: 0px 3px 10px change-color(scale-color($kars-gutter-select-bg, $lightness: -40%, $saturation: -10%), $alpha: 0.3)

    span.fake
        transition: margin 0.16s ease-out
        display: inline-block
        position: absolute
        margin-left: 2px
        left: 0

.kars-image-switch.neutral
    background-color: rgba(10, 10, 10, 0.7) !important
    a, a:hover
        color: #eee !important
    &:not(.latched) > a.selected, &:not(.latched) > a.selected:hover, span.fake
        color: #111 !important
        background: #fff
        box-shadow: 0px 3px 10px change-color(scale-color(#fff, $lightness: -40%, $saturation: -10%), $alpha: 0.3)

.card-image .kars-card-image-float.is-gallery-mode
    visibility: hidden

@include media-breakpoint-down(sm)
    .card-image .kars-card-image-float.is-gallery-mode
        visibility: visible

.card-image:hover .kars-card-image-float.is-gallery-mode
    visibility: visible

.kars-card-brief-list
    display: flex
    align-items: flex-end
    flex-wrap: wrap
    padding-top: 22px
    padding-bottom: 8px

    .card-icon, .card-icon-margin
        margin-right: 8px
        margin-bottom: 8px
    .card-icon
        display: block
        font-size: 0

.grouped-card-icon-list
    display: flex
    flex-direction: row
    flex-wrap: wrap
    margin-bottom: -8px

    .group
        display: flex
        flex-direction: column
        justify-content: flex-end
        
    .group .label
        text-transform: uppercase
        font-size: 80%
        font-weight: bold
        margin: -8px 0.5rem 0.2rem 0
    .group .kars-card-brief-list
        margin: 0
        padding: 0

.kars-member-header .kars-mem-icon
    z-index: 1

.card-icon img, .kars-mem-icon
    border-radius: 3px

.tlinject:hover
    color: white
    background-color: rgba(128, 128, 128, 0.7)
    cursor: pointer

.kars-fieldset-naturalorder
    flex-direction: row-reverse

    .item:not(:last-child)
        margin-left: 0.75rem
    .item.flexible-space
        flex-grow: 100
        flex-shrink: 100

.kars-list-alternate
    background-color: $card-bg
    border-bottom: 1px solid darken($card-bg-alt, 5%)

    &:nth-child(even)
        background-color: $card-bg-alt

    &:first-child
        border-top-left-radius: 16px
        border-top-right-radius: 16px
    &:last-child
        border-bottom-left-radius: 16px
        border-bottom-right-radius: 16px
        border-bottom: none

.kars-long-var-container
    border: 1px solid $kars-var-color
    overflow-x: auto

.kars-long-var-table
    width: 100%
    table-layout: fixed

    th
        background: change-color($kars-var-color, $alpha: 0.5)
        text-transform: uppercase

    th, td
        font-size: 80%
        text-align: center
    
    tr:not(:first-child)
        th, td
            border-top: 1px solid $kars-var-color

    th:not(:first-child), td:not(:first-child)
        border-left: 1px solid $kars-var-color

.kars-data-ts[data-orig-offset]
    border-bottom: 1px dashed

.kars-event-cutoff-card
    margin-top: 1rem

.dev-only
    display: none

.hevent-now
    color: $ongoing-event-text

@include media-breakpoint-down(md)
    .col-lg:not(:last-child)
        margin-bottom: 1.5rem

